[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://CommandFollowingResults.gd" type="Script" id=2]

[node name="CommandFollowingResults" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 75.0
margin_bottom = 100.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskResultsTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Command Following Trial Results"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 40 )

[node name="TotalCommands" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 62.0
margin_right = 330.0
margin_bottom = 76.0
text = "Total number of commands given: "
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 80.0
margin_right = 330.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 10 )

[node name="SuccessfulCommands" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 94.0
margin_right = 330.0
margin_bottom = 108.0
text = "Average successful response percent: "
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 112.0
margin_right = 330.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 10 )

[node name="AvgResponse" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 126.0
margin_right = 330.0
margin_bottom = 140.0
text = "Average response time: "
align = 1

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 144.0
margin_right = 330.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 10 )

[node name="AvgSettlingPercent" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 158.0
margin_right = 330.0
margin_bottom = 172.0
text = "Average successful settling percent: "
align = 1

[node name="MarginContainer8" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 176.0
margin_right = 330.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 10 )

[node name="AvgSettling" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 190.0
margin_right = 330.0
margin_bottom = 204.0
text = "Average settling time: "
align = 1

[node name="MarginContainer6" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 208.0
margin_right = 330.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 10 )

[node name="InitResponseAcc" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 222.0
margin_right = 330.0
margin_bottom = 236.0
text = "Initial response accuracy: "
align = 1

[node name="MarginContainer7" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 240.0
margin_right = 330.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvgSettlingAcc" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 254.0
margin_right = 330.0
margin_bottom = 268.0
text = "Average settling accuracy: "
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 272.0
margin_right = 330.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 356.0
margin_right = 330.0
margin_bottom = 376.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 132.0
margin_bottom = 20.0
text = "Back to Task"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 186.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 289.0
margin_bottom = 20.0
text = "Back to Menu"
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/TaskButton" to="." method="_on_TaskButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
